[gd_scene load_steps=5 format=3 uid="uid://cnuk6uk65evcc"]

[ext_resource type="PackedScene" uid="uid://bmpuxlsgbnklv" path="res://ui/components/event_participant.tscn" id="1_4h81a"]
[ext_resource type="Script" path="res://ui/components/event_popup.gd" id="1_cpr5i"]
[ext_resource type="Texture2D" uid="uid://cb7op8chmkplq" path="res://ui/assets/rpg_mmo_ui/Textures/Lobby/Hero Select/HeroSelect_Role_Offense.png" id="3_xqiv7"]
[ext_resource type="Texture2D" uid="uid://d1tuvksi6y4xw" path="res://ui/assets/rpg_mmo_ui/Textures/General/General_Border_A.png" id="4_vtufg"]

[node name="EventPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cpr5i")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -111.5
offset_right = 181.5
offset_bottom = 111.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Header" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
alignment = 1

[node name="HeaderText" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Event"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Content" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="EventDescription" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1600, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="Hero" parent="PanelContainer/MarginContainer/VBoxContainer/Content/VBoxContainer/HBoxContainer" instance=ExtResource("1_4h81a")]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Content/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_xqiv7")
stretch_mode = 5

[node name="Enemy" parent="PanelContainer/MarginContainer/VBoxContainer/Content/VBoxContainer/HBoxContainer" instance=ExtResource("1_4h81a")]
unique_name_in_owner = true
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Content/VBoxContainer/OptionsContainer"]
layout_mode = 2
texture = ExtResource("4_vtufg")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/VBoxContainer/OptionsContainer"]
layout_mode = 2
text = "What will you do?"
horizontal_alignment = 1

[node name="Footer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Footer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Footer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "SUBMIT"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Footer/MarginContainer/Button" to="." method="_on_button_pressed"]
